WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78077
[EFL] Using string method instead of char* operation in the platformLanguage().
https://bugs.webkit.org/show_bug.cgi?id=78077
Summary
[EFL] Using string method instead of char* operation in the platformLanguage().
Kihong Kwon
Reported
2012-02-07 21:45:30 PST
There is a bug in the platformLanguage(). The string which is returned from setlocale() should not be modified.
Attachments
Add patch file.
(1.30 KB, patch)
2012-02-07 23:15 PST
,
Kihong Kwon
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kihong Kwon
Comment 1
2012-02-07 23:15:35 PST
Created
attachment 126015
[details]
Add patch file.
Gyuyoung Kim
Comment 2
2012-02-07 23:51:05 PST
LGTM.
WebKit Review Bot
Comment 3
2012-02-08 03:53:28 PST
Comment on
attachment 126015
[details]
Add patch file. Clearing flags on attachment: 126015 Committed
r107065
: <
http://trac.webkit.org/changeset/107065
>
WebKit Review Bot
Comment 4
2012-02-08 03:53:39 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug