[EFL] Using string method instead of char* operation in the platformLanguage(). https://bugs.webkit.org/show_bug.cgi?id=78077

Patch by Kihong Kwon <kihong.kwon@samsung.com> on 2012-02-08
Reviewed by Andreas Kling.

No new tests. Just fix a bug of platformLanguage function.

* platform/efl/LanguageEfl.cpp:
(WebCore::platformLanguage):
Change char* operation to string operation.

Canonical link: https://commits.webkit.org/94977@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107065 268f45cc-cd09-0410-ab3c-d52691b4dbfc